--- a/polars-explorer/package.json
+++ b/polars-explorer/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-menubar": "^1.1.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@types/node": "^22.8.6",
@@ -21,6 +22,7 @@
     "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.1.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7"
