--- a/polars-explorer/src-tauri/Cargo.toml
+++ b/polars-explorer/src-tauri/Cargo.toml
@@ -22,4 +22,6 @@ tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+rfd = { version = "0.15.0", features = ["file-handle-inner"] }
+polars = { version = "0.44.2", features = ["lazy", "csv"] }
 
