--- a/polars-explorer/package.json
+++ b/polars-explorer/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@tanstack/react-table": "^8.20.5",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@types/node": "^22.8.6",
@@ -32,6 +34,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "daisyui": "^4.12.14",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
