--- a/polars-explorer/src-tauri/Cargo.toml
+++ b/polars-explorer/src-tauri/Cargo.toml
@@ -23,5 +23,14 @@ tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rfd = { version = "0.15.0", features = ["file-handle-inner"] }
-polars = { version = "0.44.2", features = ["lazy", "csv"] }
+polars = { version = "0.44.2", features = ["lazy", "csv", "serde"] }
 
+
+# Try to improve compilation speed
+[build]
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+incremental = true
+
+[profile.dev]
+opt-level = 0               # Use slightly better optimizations.
+overflow-checks = false     # Disable integer overflow checks.
