--- a/polars-explorer/package.json
+++ b/polars-explorer/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
