--- a/polars-explorer/src-tauri/Cargo.toml
+++ b/polars-explorer/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rfd = { version = "0.15.0", features = ["file-handle-inner"] }
-polars = { version = "0.44.2", features = ["lazy", "csv", "serde"] }
+polars = { version = "0.44.2", features = ["lazy", "csv", "serde", "describe"] }
 
 
 # Try to improve compilation speed
