--- a/polars-explorer/package.json
+++ b/polars-explorer/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-table": "^8.20.5",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
@@ -25,6 +27,7 @@
     "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
