--- a/polars-explorer/package.json
+++ b/polars-explorer/package.json
@@ -10,6 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "@mui/x-tree-view": "^7.22.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-menubar": "^1.1.2",
