--- a/polars-explorer/package.json
+++ b/polars-explorer/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.1.6",
     "@mui/x-tree-view": "^7.22.1",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
